--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -11,9 +11,9 @@
   
 .navbar-container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     height: 80px;
+    width: 100%;
 }
   
 .navbar-logo {
@@ -29,10 +29,20 @@
 
 .nav-menu {
   display: flex;
-  margin-left: 200px;
   list-style: none;
   text-align: center;
-  justify-content: end;
+  justify-content: right;
+  margin-left: auto;
+  margin-right: 20px;
+}
+
+.nav-menu-active {
+  display: flex;
+  list-style: none;
+  text-align: center;
+  justify-content: right;
+  margin-left: auto;
+  margin-right: 20px;
 }
 
 .nav-item {
@@ -48,98 +58,60 @@
   height: 100%;
 }
 
-.nav-links:hover {
-  border-bottom: 4px solid #122d7a;
-  transition: all 0.2s ease-out;
+.menu-icon {
+  display: none;
 }
-/*
+
+@media (max-width: 910px) {
+
+  .navbar-logo {
+    font-size: 1.6rem;
+  }
+    
+  .nav-menu {
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    top: -500%;
+    transition: all 0.7s ease-in;
+    z-index: -999;
+  }
   
-  .nav-links-mobile {
-    display: none;
+  .nav-menu-active {
+    background-color: #d9d8d4a1;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    align-items: center;
+    top: 80px;
+    z-index: 1;
+    transition: all 0.7s ease-in;
+  }
+
+  .nav-item {
+    width: 100%;
+  }
+  
+  .nav-links {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
+  
+  .nav-links:hover {
+    background-color: #fff;
+    color: #122d7a;
+    border-radius: 0;
   }
   
   .menu-icon {
-    display: none;
+    color: #122d7a;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 70%);
+    font-size: 1.8rem;
+    cursor: pointer;
   }
-  
-  @media screen and (max-width: 960px) {
-    .NavbarItems {
-      position: relative;
-    }
-  
-    .nav-menu {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      height: 90vh;
-      position: absolute;
-      top: 80px;
-      left: -100%;
-      opacity: 1;
-      transition: all 0.5s ease;
-    }
-  
-    .nav-menu.active {
-      background: #242222;
-      left: 0;
-      opacity: 1;
-      transition: all 0.5s ease;
-      z-index: 1;
-    }
-  
-    .nav-links {
-      text-align: center;
-      padding: 2rem;
-      width: 100%;
-      display: table;
-    }
-  
-    .nav-links:hover {
-      background-color: #fff;
-      color: #242424;
-      border-radius: 0;
-    }
-  
-    .navbar-logo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      transform: translate(25%, 50%);
-    }
-  
-    .menu-icon {
-      display: block;
-      position: absolute;
-      top: 0;
-      right: 0;
-      transform: translate(-100%, 60%);
-      font-size: 1.8rem;
-      cursor: pointer;
-    }
-  
-    .fa-times {
-      color: #fff;
-      font-size: 2rem;
-    }
-  
-    .nav-links-mobile {
-      display: block;
-      text-align: center;
-      margin: 2rem auto;
-      border-radius: 4px;
-      width: 80%;
-      text-decoration: none;
-      font-size: 1.5rem;
-      background-color: transparent;
-      color: #fff;
-      padding: 14px 20px;
-      border: 1px solid #fff;
-      transition: all 0.3s ease-out;
-    }
-  
-    .nav-links-mobile:hover {
-      background: #fff;
-      color: #242424;
-      transition: 250ms;
-    }
-  }*/
+}
