--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,11 +1,10 @@
 .navbar {
-    background: #d9d8d4a1;
+    background: #efefef;
     height: 80px;
     display: flex;
     margin: 20px;
     font-size: 1.2rem;
     position: sticky;
-    top: 0;
     z-index: 999;
 }
   
@@ -18,12 +17,12 @@
   
 .navbar-logo {
     color: #122d7a;
+    font-family: 'Courgette';
     display: flex;
     cursor: pointer;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 1.5rem;
     align-items: center;
-    margin-left: 20px;
     font-weight: bold;
 }
 
@@ -78,7 +77,7 @@
   }
   
   .nav-menu-active {
-    background-color: #d9d8d4a1;
+    background-color: #efefef;
     flex-direction: column;
     width: 100%;
     position: absolute;
