--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,11 +1,12 @@
 .navbar {
-    background: #efefef;
-    height: 80px;
+    background: #fff;
+    height: 70px;
     display: flex;
-    margin: 20px;
-    font-size: 1.2rem;
+    align-items: center;
+    font-size: 1rem;
     position: sticky;
     z-index: 999;
+    box-shadow: 0px 5px 5px #acabab;
 }
   
 .navbar-container {
@@ -44,10 +45,6 @@
   margin-right: 20px;
 }
 
-.nav-item {
-  height: 80px;
-}
-
 .nav-links {
   color:#122d7a;
   display: flex;
@@ -59,6 +56,11 @@
 
 .menu-icon {
   display: none;
+}
+
+.nav-links:hover {
+  background-color: rgba(239, 239, 239, 0.5);
+  transition: all 0.5s ease;
 }
 
 @media (max-width: 910px) {
@@ -77,17 +79,19 @@
   }
   
   .nav-menu-active {
-    background-color: #efefef;
+    background-color: #fff;
     flex-direction: column;
     width: 100%;
     position: absolute;
     align-items: center;
-    top: 80px;
+    top: 70px;
     z-index: -999;
     transition: all 0.3s ease-in;
+    box-shadow: 0px 5px 5px #acabab;
   }
 
   .nav-item {
+    height: 70px;
     width: 100%;
   }
   
@@ -95,12 +99,6 @@
     display: flex;
     text-align: center;
     justify-content: center;
-  }
-  
-  .nav-links:hover {
-    background-color: #fff;
-    color: #122d7a;
-    border-radius: 0;
   }
   
   .menu-icon {
